[gd_scene load_steps=6 format=2]

[ext_resource path="res://steve/steve.tscn" type="PackedScene" id=1]
[ext_resource path="res://path_test/path_test.gd" type="Script" id=2]
[ext_resource path="res://items/coin_placeholder/coin_placeholder.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 64, 240, -32.5269, 11.3137, 32.5269, -11.3137, 168, 244, -42.4264, 9.19239, 42.4264, -9.19239, 200, 180, -17.6777, -7.77818, 17.6777, 7.77818, 272, 196 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 272, 208, 1.12246, -32.5514, -1.12246, 32.5514, 340, 276, 68.7508, 0.280615, -68.7508, -0.280615, 264, 328, 0, 0, 0, 0, 132, 288 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="NpcSteve" parent="." instance=ExtResource( 1 )]

[node name="Coin1Placeholder" parent="." instance=ExtResource( 3 )]
position = Vector2( 272, 208 )

[node name="Path1" type="Path2D" parent="."]
position = Vector2( 0, 12 )
curve = SubResource( 1 )

[node name="PathFollow1" type="PathFollow2D" parent="Path1"]
position = Vector2( 64, 240 )
rotate = false
cubic_interp = false
loop = false

[node name="Path2" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PathFollow2" type="PathFollow2D" parent="Path2"]
position = Vector2( 272, 208 )
rotate = false
cubic_interp = false
loop = false
